feat: 경매 상품 이미지 업로드, 조회 구현