@@ -1,28 +1,34 @@
 package junggoin.Back_End.domain.image.service;
 
 import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.model.CannedAccessControlList;
 import com.amazonaws.services.s3.model.DeleteObjectRequest;
 import com.amazonaws.services.s3.model.ObjectMetadata;
 import com.amazonaws.services.s3.model.PutObjectRequest;
 import com.amazonaws.util.IOUtils;
+
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.util.*;
 
+import jakarta.annotation.PostConstruct;
 import junggoin.Back_End.domain.auction.Auction;
 import junggoin.Back_End.domain.auction.service.AuctionService;
-import junggoin.Back_End.domain.image.dto.ImageUploadResponseDTO;
+import junggoin.Back_End.domain.image.dto.AnalyzeProductRequestDto;
+import junggoin.Back_End.domain.image.dto.AnalyzeProductResponseDto;
+import junggoin.Back_End.domain.image.dto.ImageResponseDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
 @Slf4j
@@ -36,30 +42,48 @@ public class ImageService {
     @Value("${cloud.aws.s3.bucket}")
     private String bucketName;
 
+    @Value("${ai_server_url}")
+    private String ai_server_url;
+
+    private RestTemplate restTemplate;
+
+    @PostConstruct
+    public void init() {
+        restTemplate = new RestTemplateBuilder()
+                .rootUri(ai_server_url)
+                .setConnectTimeout(Duration.ofSeconds(5))
+                .build();
+    }
+
     @Transactional
-    public ImageUploadResponseDTO upload(List<MultipartFile> images, Long auctionId) {
-        if(images.isEmpty()){
-            throw new RuntimeException();
+    public ImageResponseDto upload(List<MultipartFile> images, Long auctionId) {
+        // 이미지 확인
+        if (images.isEmpty()) {
+            throw new IllegalArgumentException("상품 이미지는 적어도 1개 이상 올려야합니다.");
         }
 
+        // 경매 먼저 확인
+        Auction auction = auctionService.findById(auctionId);
+
+        // 이미지 업로드
         List<String> urls = new ArrayList<>();
         images.forEach(image -> {
-            String url =uploadImage(image);
+            String filename = "images/auctions/" + auctionId + "/" + images.indexOf(image);
+            String url = uploadImage(image, filename);
             urls.add(url);
         });
 
-        Auction auction= auctionService.findById(auctionId);
         auction.updateImageUrls(urls);
-        return ImageUploadResponseDTO.builder()
+        return ImageResponseDto.builder()
                 .imageUrls(urls)
                 .auctionId(auctionId)
                 .build();
     }
 
-    private String uploadImage(MultipartFile image) {
+    private String uploadImage(MultipartFile image, String filename) {
         this.validateImageFileExtention(Objects.requireNonNull(image.getOriginalFilename()));
         try {
-            return this.uploadImageToS3(image);
+            return this.uploadImageToS3(image, filename);
         } catch (IOException e) {
             throw new RuntimeException();
         }
@@ -69,62 +93,60 @@ public class ImageService {
     private void validateImageFileExtention(String filename) {
         int lastDotIndex = filename.lastIndexOf(".");
         if (lastDotIndex == -1) {
-            throw new RuntimeException();
+            throw new RuntimeException("파일 확장자가 있어야합니다.");
         }
 
         String extention = filename.substring(lastDotIndex + 1).toLowerCase();
         List<String> allowedExtentionList = Arrays.asList("jpg", "jpeg", "png", "gif");
 
         if (!allowedExtentionList.contains(extention)) {
-            throw new RuntimeException();
+            throw new RuntimeException("허용되지 않은 파일 형식입니다. 업로드 가능한 확장자는 jpg, jpeg, png, gif입니다.");
         }
     }
 
-    private String uploadImageToS3(MultipartFile image) throws IOException {
+    private String uploadImageToS3(MultipartFile image, String filename) throws IOException {
         String originalFilename = image.getOriginalFilename(); //원본 파일 명
-        String extention = originalFilename.substring(originalFilename.lastIndexOf(".")); //확장자 명
-
-        String s3FileName = UUID.randomUUID().toString().substring(0, 10) + originalFilename; //변경된 파일 명
+        String extension = Objects.requireNonNull(originalFilename).substring(originalFilename.lastIndexOf(".")); //확장자 명
+        filename = filename + extension;
 
         InputStream is = image.getInputStream();
         byte[] bytes = IOUtils.toByteArray(is);
 
         ObjectMetadata metadata = new ObjectMetadata();
-        metadata.setContentType("image/" + extention);
+        metadata.setContentType("image/" + extension);
         metadata.setContentLength(bytes.length);
         ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(bytes);
 
-        try{
-            PutObjectRequest putObjectRequest =
-                    new PutObjectRequest(bucketName, s3FileName, byteArrayInputStream, metadata)
-                            .withCannedAcl(CannedAccessControlList.PublicRead);
-            amazonS3.putObject(putObjectRequest); // put image to S3
-        }catch (Exception e){
-            throw new RuntimeException();
-        }finally {
-            byteArrayInputStream.close();
-            is.close();
-        }
+        PutObjectRequest putObjectRequest =
+                new PutObjectRequest(bucketName, filename, byteArrayInputStream, metadata);
+        amazonS3.putObject(putObjectRequest); // put image to S3
+        byteArrayInputStream.close();
+        is.close();
 
-        return amazonS3.getUrl(bucketName, s3FileName).toString();
+        return amazonS3.getUrl(bucketName, filename).toString();
     }
 
-    public void deleteImageFromS3(String imageAddress){
+    public void deleteImageFromS3(String imageAddress) throws IOException {
         String key = getKeyFromImageAddress(imageAddress);
-        try{
-            amazonS3.deleteObject(new DeleteObjectRequest(bucketName, key));
-        }catch (Exception e){
-            throw new RuntimeException();
-        }
+        amazonS3.deleteObject(new DeleteObjectRequest(bucketName, key));
     }
 
-    private String getKeyFromImageAddress(String imageAddress){
-        try{
-            URL url = new URL(imageAddress);
-            String decodingKey = URLDecoder.decode(url.getPath(), "UTF-8");
-            return decodingKey.substring(1); // 맨 앞의 '/' 제거
-        }catch (MalformedURLException | UnsupportedEncodingException e){
-            throw new RuntimeException();
-        }
+    // s3는 디렉토리가 따로 없고 key로 구분
+    private String getKeyFromImageAddress(String imageAddress) throws MalformedURLException {
+        URL url = new URL(imageAddress);
+        String decodingKey = URLDecoder.decode(url.getPath(), StandardCharsets.UTF_8);
+        return decodingKey.substring(1); // 맨 앞의 '/' 제거
+    }
+
+    public ImageResponseDto getImagesByAuction(Long auctionId) {
+
+        return ImageResponseDto.builder()
+                .auctionId(auctionId)
+                .imageUrls(auctionService.findById(auctionId).getImageUrls())
+                .build();
+    }
+
+    public AnalyzeProductResponseDto analyzeImage(Long auctionId) {
+        return restTemplate.postForObject("/analyze-product", new AnalyzeProductRequestDto(auctionId), AnalyzeProductResponseDto.class);
     }
 }
